Added Achievements Page

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,9 +9,7 @@ header {
     /* background-color: #4c0033;
     background-image: linear-gradient(43deg, #4c0033 0%, #38102a 22%, #5d1546 49%, #763962 75%, #4c0033 100%); */
     background-color: #4c0033;
-background-image: linear-gradient(43deg, #4c0033 0%, #411a34 17%, #5e2a4c 39%, #613a55 60%, #6c3459 80%, #302525 100%);
-
-
+/* background-image: linear-gradient(43deg, #4c0033 0%, #411a34 17%, #5e2a4c 39%, #613a55 60%, #6c3459 80%, #302525 100%); */
 }
 
 
