update landing page

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 
 :root {
     /* --color-bg: #821752; */
-    --color-bg: #4C0033;
+    --color-bg: #06283D;
     --color-bg-variant: #F8EFD4;
     --color-primary: #160f16;
     --color-primary-variant: #EDC988;
