--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 header {
     height: 100vh;
     padding-top: 8rem;
@@ -8,7 +7,7 @@ header {
     padding-bottom: 2rem;
     /* background-color: #4c0033;
     background-image: linear-gradient(43deg, #4c0033 0%, #38102a 22%, #5d1546 49%, #763962 75%, #4c0033 100%); */
-    background-color: #4c0033;
+    background-color: var(--color-bg);
 /* background-image: linear-gradient(43deg, #4c0033 0%, #411a34 17%, #5e2a4c 39%, #613a55 60%, #6c3459 80%, #302525 100%); */
 }
 
@@ -16,26 +15,34 @@ header {
 .header__container {
     height: 100%;
     padding-top: 7rem;
-    padding-left: calc(50% - 32rem);
+    padding-left: calc(50% - 35rem);
     display: flex;
     flex-direction: column;
     text-align: start;
+    color: #F9FBFC;
 }
 
 header h5 {
-   margin-bottom: -1.4rem;
-   font-size: 2rem;
+   margin-bottom: -1.5rem;
+   margin-top: -2rem;
+   font-size: 2.5rem;
+}
+
+header .greeting {
+    font-weight: 300;
+    font-size: 2.2rem;
+    margin-bottom: -2.5rem;
 }
 
 header h1 {
    padding-top: -3rem;
-   font-size: 55px;
-   font-weight: 600;
+   font-size: 5rem;
+   font-weight: 700;
    margin-bottom: -1rem;
 }
 
 .cta {
-    margin-top: 2rem;
+    margin-top: 3rem;
     display: flex;
     gap: 1.8rem;
     justify-content: start;
@@ -52,7 +59,12 @@ header h1 {
 }
 
 .cta .down {
-   color: rgb(182, 186, 190);
+   background-color: #256D85;
+   color: white;
+}
+
+.cta .touch {
+    background-color: #D9D9D9;
 }
 
 
