--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
+
 #about {
     background-color: var(--color-bg-variant);
     padding-top: 6rem;
     padding-bottom: 2rem;
+    font-family: "Ubuntu", sans-serif;
 }
 
 .about {
@@ -16,6 +20,11 @@
 .about h5 {
     color: var(--color-bg);
     margin-top: 0rem;
+}
+
+.about .hire {
+    background-color: #256D85;
+    color: white;
 }
 
 .about__container {
@@ -39,7 +48,7 @@
     margin-left: 5rem;
     display: flex;
     text-align: start;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 @media screen and (max-width: 1310px) {
