--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 :root {
     /* --color-bg: #821752; */
     --color-bg: #06283D;
-    --color-bg-variant: #F8EFD4;
+    --color-bg-variant: #E3EDF1;
     --color-primary: #160f16;
     --color-primary-variant: #EDC988;
     --color-white: #fff;
@@ -102,8 +102,8 @@ a:hover {
 .btn {
     width: max-content;
     display: inline-block;
-    color: rgb(80, 47, 73);
-    padding: 0.75rem 1.2rem;
+    color: rgb(95, 150, 164);
+    padding: 0.4rem 1.2rem;
     border-radius: 0.5rem;
     cursor: pointer;
     border: 2px solid var(--color-primary);
